# read-structure

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml
src/: lib.rs  read_segment.rs  read_structure.rs  segment_type.rs
