[package]
name = "read-structure"
version = "0.0.1-alpha.0"
edition = "2021"
authors = [
    "Nils Homer <nils@fulcrumgenomics.com>",
    "Seth Stadick <seth@fulcrumgenomics.com>"
]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/read-structure"
homepage = "https://github.com/fulcrumgenomics/read-structure"
repository = "https://github.com/fulcrumgenomics/read-structure"
description = "Library for parsing and working with read structure descriptions"
keywords = ["bioinformatics", "genomic"]
categories = ["science"]


[dependencies]
bstr = "0.2.17"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.30"
